# rag-embedding-service

./: .gitignore  README.md  example.env  pyproject.toml  ruff.toml
app/: main.py  settings.py
app/api/: common.py  content.py  embeddings.py
app/resources/: strings.py
app/schemas/: domains.py  enums.py
app/services/: embeddings.py  rag.py  utils.py
scripts/: format  lint
